fix: artist cards slightly large on ios

--- a/styles/global.css
+++ b/styles/global.css
@@ -168,8 +168,8 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 300px;
-  height: 500px;
+  width: 200px;
+  height: 300px;
   margin: 0.5rem;
   cursor: pointer;
 }
@@ -226,6 +226,11 @@ footer a {
   p {
     max-width: 600px;
     margin: 1.5rem auto;
+  }
+
+  .card {
+   width: 300px;
+    height: 500px;
   }
 
   .card-grid {
